pkg/lang/testdata/ub/stack-values/valid/input-list-comprehension.ub
factory: {
  inputs: { xs: [for n in [1, 2, 3]: n] }
}
