pkg/lang/testdata/ub/stack-values/invalid/input-reference-in-comprehension-body.ub
factory: {
  inputs: { x: [for n in [1, 2]: input.y] }
}
